# json2pdf

./: README.md  cli.py  main.py  pyproject.toml
core/: __init__.py  data_loader.py  json_repair.py  pdf_generator.py  processor.py
web/: __init__.py  content.py  handlers.py  interface.py
web/styles/: __init__.py  ui_styles.py
