[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-processing"
version = "0.1.0"
description = "JSON数据预处理模块，从JSON格式中提取指定字段的数据并格式化渲染为PDF"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gradio>=4.0.0",
    "markdown2>=2.4.0",
    "weasyprint>=60.0",
    "tqdm>=4.64.0",
    "pandas>=1.5.0",
]

[project.scripts]
json-processor = "cli:main"
json-processor-web = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
